# disk_fail_simulation

./: .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  simulation_fail_disks.sln  simulation_fail_disks.vcxproj  simulation_fail_disks.vcxproj.filters
data/: gui_theme.xml
simulation_fail_disks.xcodeproj/: project.pbxproj
simulation_fail_disks.xcodeproj/xcshareddata/xcschemes/: Debug.xcscheme  Release.xcscheme
src/: CMakeLists.txt  main.cpp
src/controller/: CMakeLists.txt  simulation_controller.cpp  simulation_controller.h
src/model/: CMakeLists.txt  data_center.h  disk.h  group.cpp  group.h  id_wrapper.h  pdisk.cpp  pdisk.h  simulation.cpp  simulation.h  simulation_params.cpp  simulation_params.h  vdisk.cpp  vdisk.h
src/utils/: CMakeLists.txt  logger.cpp  logger.h
src/view/: CMakeLists.txt  gui_elements.cpp  gui_elements.h
tests/: CMakeLists.txt  group_tests.cpp  pdisk_tests.cpp  vdisk_tests.cpp
